tests/sksl/errors/ReservedNameSampler2DShadow.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'sampler2DShadow'
1 error
